# flask_app

./: app.py  env.sh  pyproject.toml
templates/: index.html
