[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["HGTech96 <gumroyan96@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_app"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.5"
SQLAlchemy = "^1.4.44"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

